--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "convertapi-js": "^1.0.8",
     "firebase": "^10.1.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "pdf-to-png-converter": "^3.1.0"
   }
 }
