--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.1.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-medium-image-zoom": "^4.4.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
