--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "convertapi-js": "^1.0.8",
     "firebase": "^10.1.0",
     "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-medium-image-zoom": "^4.4.3",
     "react-responsive-carousel": "^3.2.23",
