--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "firebase": "^10.1.0",
+    "jquery": "^3.7.0",
+    "lightbox2": "^2.11.4",
+    "lightgallery": "^2.7.1",
+    "pdf-img-convert": "^1.2.1",
+    "pdfjs": "^2.5.2",
+    "pdfjs-dist": "^3.9.179",
     "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
